# soroban-abacus-flashcards

./: .dockerignore  .gitignore  .mcp.json  .npmrc  .prettierignore  .releaserc.json  ARCADE_CHARACTER_INTEGRATION_PLAN.md  ARITHMETIC_CHALLENGES_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  Makefile  PLACE_VALUE_REFACTOR_PLAN.md  PRACTICE_PROBLEM_SYSTEM.md  PROGRESSIVE_INSTRUCTION_PLAN.md  README.md  REBUILD_CHECKLIST.md  demo_heaven_bead_fix.html  demo_heaven_bead_gap_fixed.html  generate_complete_games_website.py  generate_samples.sh  guest-auth-plan.md  hero_showcase.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-api.txt  server-persistence-plan.md  setup-dev.sh  test-templates-integration.js  test_active_bead_gaps.html  test_active_bead_gaps_fixed.html  test_active_heaven_beads.html  test_adjacent_fixed.html  (+65 more)
.claude/: AUTOMATED_WORKFLOWS.md  CLAUDE.md  REBUILD_REMINDER.md  settings.local.json  terminology.md
config/: circle-beads.yaml  colored-numerals.yaml  default.yaml  place-value-colors.yaml
docs/: MEMORY_PAIRS_TECHNICAL_PLAN.md  PACKAGES_TEMPLATES_SYSTEM.md  arcade-session-implementation-plan.md
nas-deployment/: .env.example  README.md  deploy.sh  docker-compose.blue.yaml  docker-compose.green.yaml  docker-compose.redis.yaml  docker-compose.yaml  generate-compose.sh
scripts/: dev.sh  update-examples.sh
src/: api.py  bridge.py  debug_tunnel_digging.html  flashcards_en.html  generate.py  generate_examples.py  test_all_fixes.html  web_generator.py  (+11 more)
(+6045 files in other folders)
