[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soroban-monorepo"
version = "1.0.0"
description = "Soroban flashcard generator monorepo"
dependencies = []

# uv workspace configuration
[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/templates"
]